<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user"
            android:title="@string/nav_user"
            android:icon="@drawable/ic_people" />
        <item
            android:id="@+id/nav_schedule"
            android:title="@string/nav_schedule"
            android:icon="@drawable/ic_calendar"/>
        <item
            android:id="@+id/nav_collection"
            android:title="@string/nav_collection"
            android:icon="@drawable/ic_file"
          />
        <item
            android:id="@+id/nav_follow"
            android:title="@string/nav_follow"
            android:icon="@drawable/ic_attention"
            />
        <item
            android:id="@+id/nav_contributions"
            android:title="@string/nav_contributions"
            android:icon="@drawable/ic_write"/>

    </group>

    <item android:title="其他">
        <menu>
            <item
                android:id="@+id/nav_points"
                android:title="@string/nav_vip_points" />
            <item
                android:id="@+id/nav_setting"
                android:title="@string/nav_setting" />
        </menu>
    </item>

</menu>
